# marketplace-project

./: Dockerfile  docker-compose.yml  init-db.sql  main.py  requirements.txt
app/: Dockerfile  pyproject.toml  requirements.txt
app/marketplace_project/: database.py  main.py
app/static/: style.css
app/templates/: add_product.html  index.html
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.jsx
grafana/provisioning/dashboards/: backend_metrics.json  elasticsearch_metrics.json  postgres_metrics.json  redis_metrics.json  system_metrics.json
grafana/provisioning/datasources/: datasources.yml
nginx/: default.conf
prometheus/: prometheus.yml
static/: style.css
templates/: index.html
