[tool.poetry]
name = "marketplace_project"
version = "0.1.0"
description = "Маркетплейс на Flask, SQLAlchemy, Redis, Elasticsearch и PostgreSQL"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.2.3"
flask-sqlalchemy = "3.0.2"
psycopg2 = "2.9.5"
redis = "4.5.1"
elasticsearch = "8.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
